--- a/style.css
+++ b/style.css
@@ -484,10 +484,14 @@ nav {
 @media only screen and (max-width: 480px) {
   body {
     width: 100%;
+    background-color: #ffffff;
   }
   .all__content{
     width: 100%;
     padding: 0;
+  }
+  nav{
+    margin-top: 0;
   }
 
   .top__container {
@@ -503,9 +507,12 @@ nav {
   }
 
   .analytics__section {
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     margin-bottom: 15%;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .analytics1,
